# Leee

./: .gitignore  CMakeLists.txt  Doxyfile  GETTING_STARTED.md  README.md  demo.sh  example_pinocchio_usage.cpp  generate_docs.sh  install.sh  main.py  project-overview.sh  requirements.txt  run_tests.sh
applications/automation-line/: README.md
applications/collaborative-robot/: README.md
applications/industrial-robot/: CMakeLists.txt  README.md
applications/industrial-robot/config/: welding_config.yaml
applications/industrial-robot/src/: main.cpp  welding_control.cpp  welding_control.h
applications/service-robot/: README.md
capability-foundations/: README.md  third_party.cmake
capability-foundations/fmt/: metadata.json
capability-foundations/leee/: bytearray.h  logger.h
capability-foundations/websocketpp/: metadata.json
cmake/: LeeeConfig.cmake.in  cmake_uninstall.cmake.in
design-specs/: README.md
design-specs/architecture/: ai-driven-development.md  header-only-principles.md  module-structure.md  system-overview.md
design-specs/coding-standards/: code-style.md  error-handling.md  naming-conventions.md
design-specs/documentation/: api-documentation.md
design-specs/testing-guidelines/: unit-testing.md
development/: README.md
development-tools/: CMakeLists.txt
development-tools/debugging/: CMakeLists.txt
development-tools/examples/: CMakeLists.txt  bytearray_example.cpp  logger_example.cpp
development-tools/examples/cpp/: bytearray_example.cpp  logger_example.cpp  robot_kinematics_example.cpp
development-tools/examples/python/: robot_control_example.py
development-tools/examples/robotics/: pick_and_place_demo.py
development-tools/scripts/: build.sh  deploy.sh
development-tools/simulation/: CMakeLists.txt
development-tools/test/: CMakeLists.txt  build_and_run.sh  test_bytearray.cpp  test_edge_cases.cpp  test_integration.cpp  test_logger.cpp  test_performance.cpp  test_report_generator.cpp
development-tools/test/integration/: test_integration.cpp
development-tools/test/performance/: test_performance.cpp
development-tools/test/unit/: test_bytearray.cpp  test_edge_cases.cpp  test_kinematics.cpp  test_logger.cpp
development/backlog/: README.md  product-backlog.md  sprint-002-backlog.md
development/retrospectives/: README.md  sprint-001-retro.md
development/roadmap/: README.md  v1.0-roadmap.md
development/sprints/: README.md
development/sprints/sprint-001/: goals.md  tasks.md
doc/: README.md  README_ByteArray.md  README_Doxygen.md  README_Logger.md  README_Test.md  bytearray.dox  logger.dox  mainpage.dox
examples/: CMakeLists.txt
header-only/: README.md  third_party.cmake
header-only/asio/: metadata.json
header-only/doctest/: metadata.json
header-only/eigen/: metadata.json
header-only/httplib/: metadata.json
header-only/json/: json.hpp  metadata.json
header-only/plog/: metadata.json
human-interface/: CMakeLists.txt
human-interface/data-visualization/: CMakeLists.txt
human-interface/intuitive-control/: CMakeLists.txt
human-interface/remote-monitoring/: CMakeLists.txt
human-interface/robotics/: leee_robot.py  robot_kinematics.py
human-interface/web/: CMakeLists.txt  app.py
human-interface/web/static/css/: style.css
human-interface/web/static/js/: app.js
human-interface/web/templates/: index.html
include/: bytearray.h  logger.h
industrial-integration/: CMakeLists.txt
industrial-integration/network/: CMakeLists.txt
industrial-integration/production-lines/: CMakeLists.txt
industrial-integration/protocol-adapters/: CMakeLists.txt
industrial-integration/quality-control/: CMakeLists.txt
motion-control/: CMakeLists.txt
motion-control/control/: controller.h
motion-control/dynamics/: dynamics_solver.h
motion-control/force-control/: CMakeLists.txt
motion-control/kinematics/: kinematics_solver.h
motion-control/math/: math_utils.h
motion-control/servo-control/: CMakeLists.txt
motion-control/trajectory-planning/: CMakeLists.txt
perception/: CMakeLists.txt
perception/anomaly-detection/: CMakeLists.txt
perception/position-sensing/: CMakeLists.txt
perception/state-monitoring/: CMakeLists.txt
system-management/: CMakeLists.txt
system-management/config/: config_manager.h
system-management/configuration/: CMakeLists.txt
system-management/health-monitoring/: CMakeLists.txt
system-management/logging/: CMakeLists.txt
task-planning/: CMakeLists.txt
task-planning/dynamic-scheduling/: CMakeLists.txt
task-planning/path-optimization/: CMakeLists.txt
task-planning/task-orchestration/: CMakeLists.txt
test/: CMakeLists.txt  build_and_run.sh  test_edge_cases.cpp  test_integration.cpp  test_logger.cpp  test_performance.cpp  test_report_generator.cpp
workspace/templates/advanced-robot-app/: README.md
workspace/templates/basic-robot-app/: CMakeLists.txt  README.md
